--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>注文ページ</title>
   <style>
+    header {
+    background-color: #333333;
+    color: white;
+    padding: 1em;
+    text-align: center;
+    font-size: 1.8em;
+    width: 100%;
+    margin: 0;
+    box-sizing: border-box;
+    margin-bottom: 1.5em; /* ← これが間隔 */
+    }
     body {
       font-family: sans-serif;
       margin: 20px;
@@ -34,16 +45,18 @@
     #menuContainer {
       display: flex;
       flex-wrap: wrap;
-      gap: 15px;
+      justify-content: space-between; /* 両端に寄せる */
     }
     .menuItem {
       border: 1px solid #ccc;
       border-radius: 8px;
       padding: 10px;
-      width: 150px;
+      width: 48%;
       text-align: center;
       cursor: pointer;
       background: #fff;
+      box-sizing: border-box;
+      margin-bottom: 10px;
     }
     .menuItem img {
       width: 100%;
@@ -53,7 +66,7 @@
   </style>
 </head>
 <body>
-  <h1>注文ページ</h1>
+  <header>注文ページ</header>
   <div class="wrapper">
     <!-- 左メニュー -->
     <div id="leftMenu">
